--- a/payloads/Makefile.inc
+++ b/payloads/Makefile.inc
@@ -19,6 +19,7 @@ img/coreinfo-type := payload
 
 PAYLOADS_LIST=\
 payloads/coreinfo \
+payloads/nvramcui \
 payloads/libpayload \
 payloads/external/depthcharge \
 payloads/external/SeaBIOS \
@@ -27,6 +28,13 @@ payloads/external/Memtest86Plus
 
 payloads/coreinfo/build/coreinfo.elf coreinfo:
 	$(MAKE) -C payloads/coreinfo defaultbuild
+
+cbfs-files-$(CONFIG_NVRAMCUI_SECONDARY_PAYLOAD) += img/nvramcui
+img/nvramcui-file := payloads/nvramcui/nvramcui.elf
+img/nvramcui-type := payload
+
+payloads/nvramcui/nvramcui.elf nvramcui:
+	CC=$(GCC_CC_x86_32) $(MAKE) -C payloads/nvramcui
 
 clean-payloads:
 	$(foreach payload, $(PAYLOADS_LIST), $(MAKE) -C $(payload) clean; )
